# carla-ros-bridge-scoomatic

carla_scoomatic/: CMakeLists.txt  README.md  package.xml  setup.py
carla_scoomatic/config/: rviz_scoomatic_config.rviz  sensors.json
carla_scoomatic/launch/: carla_ego_scoomatic.launch  carla_example_ego_scoomatic.launch  carla_example_scoomatic.launch  carla_ros_bridge_with_custom_rviz.launch  carla_scoomatic.launch
carla_scoomatic/src/carla_scoomatic/: carla_scoomatic.py
carla_scoomatic_launch/: CMakeLists.txt  README.md  package.xml
carla_scoomatic_launch/config/: rviz_scoomatic_config.rviz
carla_scoomatic_launch/launch/: carla_ros_bridge_with_custom_rviz.launch  carla_ros_bridge_with_ego_and_rviz.launch  carla_ros_bridge_with_ego_scoomatic.launch  scoomatic_gmapping.launch  scoomatic_octomap.launch
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/msg/: ScenarioParams.msg
dynamic_obstacle_visualizer/: CMakeLists.txt  README.md  package.xml  setup.py
dynamic_obstacle_visualizer/launch/: dynamic_obstacle_visualizer.launch
dynamic_obstacle_visualizer/src/dynamic_obstacle_visualizer/: dynamic_obstacle_visualizer.py
odom_publisher/: CMakeLists.txt  README.md  package.xml  setup.py
odom_publisher/launch/: odom_publisher.launch
odom_publisher/src/odom_publisher/: odom_publisher.py
pc2l/: CMakeLists.txt  README.md  package.xml
pc2l/launch/: pointcloud_to_laserscan.launch
scenario_optimizer/: CMakeLists.txt  README.md  package.xml  setup.py
scenario_optimizer/BayesianOptimization/bayes_opt/: logger.py  target_space.py
scenario_optimizer/Bayesian_Optimization/bayes_opt/: bayesian_optimization.py  domain_reduction.py
scenario_optimizer/launch/: scenario_optimizer.launch
scenario_optimizer/src/scenario_optimizer/: scenario_optimizer.py
scoomatic_controller/: CMakeLists.txt  README.md  package.xml  setup.py
scoomatic_controller/config/: pid_params.yaml  rviz_controller_config.rviz
scoomatic_controller/launch/: scoomatic_controller.launch
scoomatic_controller/src/scoomatic_controller/: scoomatic_controller.py
scoomatic_msgs/: CMakeLists.txt  package.xml
scoomatic_msgs/msg/: ScoomaticControl.msg
scoomatic_navigation/: CMakeLists.txt  README.md  package.xml  setup.py
scoomatic_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
scoomatic_navigation/launch/: move_base.launch
scoomatic_navigation/map/: gmapping_map.yaml
scoomatic_navigation/src/scoomatic_navigation/: scoomatic_navigation.py
scoomatic_scenario/: CMakeLists.txt  README.md  package.xml  setup.py
scoomatic_scenario/launch/: scoomatic_scenario.launch  scoomatic_stack_and_scenario.launch
scoomatic_scenario/src/scoomatic_scenario/: scoomatic_scenario.py
