<?xml version="1.0"?>
<package format="2">
  <name>pc2l</name>
  <version>0.1.0</version>
  <description>The pc2l package</description>
  <maintainer email="julian.trommer@web.de">Julian Trommer</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
