<?xml version="1.0"?>
<package format="2">
  <name>scenario_optimizer</name>
  <version>0.1.0</version>
  <description>The scenario_optimizer package</description>
  <maintainer email="julian.trommer@web.de">Julian Trommer</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>custom_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>carla_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>custom_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>carla_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <export>
  </export>
</package>
