<?xml version="1.0"?>
<package format="2">
  <name>scoomatic_navigation</name>
  <version>0.0.0</version>
  <description>The scoomatic_navigation package</description>
  <maintainer email="julian.trommer@web.de">Julian Trommer</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>move_base</exec_depend>
  <export>
  </export>
</package>
